@@ -2,7 +2,7 @@ JSch 0.0.* was released under the GNU LGPL license.  Later, we have switched
 over to a BSD-style license. 
 
 ------------------------------------------------------------------------------
-Copyright (c) 2002-2015 Atsuhiko Yamanaka, JCraft,Inc. 
+Copyright (c) 2002-2022 Atsuhiko Yamanaka, JCraft,Inc. / Aleksandr Kiselev
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
